[gd_scene load_steps=8 format=2]

[ext_resource path="res://ui/HUD.gd" type="Script" id=1]
[ext_resource path="res://assets/fonts/NotoColorEmoji.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://assets/fonts/NewTegomin-Regular.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://ui/EnergyBar.tscn" type="PackedScene" id=4]

[sub_resource type="DynamicFont" id=1]
size = 32
use_mipmaps = true
use_filter = true
font_data = ExtResource( 2 )
fallback/0 = ExtResource( 3 )

[sub_resource type="DynamicFontData" id=2]
font_path = "res://assets/fonts/NewTegomin-Regular.ttf"

[sub_resource type="DynamicFont" id=3]
size = 120
use_filter = true
font_data = SubResource( 2 )
fallback/0 = ExtResource( 2 )

[node name="HUD" type="CanvasLayer"]
script = ExtResource( 1 )

[node name="EnergyBar" parent="." instance=ExtResource( 4 )]
visible = false
margin_left = 10.0
margin_top = 20.0
margin_right = 322.0
margin_bottom = 60.0

[node name="OnlineInfo" type="MarginContainer" parent="."]
anchor_right = 1.0
margin_left = -20.0
margin_top = 20.0
margin_right = -20.0
margin_bottom = 104.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBox" type="HBoxContainer" parent="OnlineInfo"]
margin_right = 1920.0
margin_bottom = 84.0
alignment = 2

[node name="VBox" type="VBoxContainer" parent="OnlineInfo/HBox"]
margin_left = 1776.0
margin_right = 1920.0
margin_bottom = 84.0

[node name="LabelServer" type="Label" parent="OnlineInfo/HBox/VBox"]
margin_right = 144.0
margin_bottom = 14.0
text = "Connecting to server..."
align = 2

[node name="LabelGame" type="Label" parent="OnlineInfo/HBox/VBox"]
margin_top = 18.0
margin_right = 144.0
margin_bottom = 32.0

[node name="LabelUsers1" type="Label" parent="OnlineInfo/HBox/VBox"]
margin_top = 36.0
margin_right = 144.0
margin_bottom = 50.0

[node name="LabelUsers2" type="Label" parent="OnlineInfo/HBox/VBox"]
margin_top = 53.0
margin_right = 144.0
margin_bottom = 83.1176
custom_fonts/font = SubResource( 1 )
autowrap = true

[node name="Message" type="Label" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -150.0
margin_bottom = -150.0
custom_fonts/font = SubResource( 3 )
text = "Your Ad Here"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TimerHideMessage" type="Timer" parent="."]
wait_time = 2.0

[node name="TimerEBarBlink" type="Timer" parent="."]

[connection signal="timeout" from="TimerHideMessage" to="." method="_on_TimerHideMessage_timeout"]
[connection signal="timeout" from="TimerEBarBlink" to="." method="_on_TimerEBarBlink_timeout"]
